2007-03-07	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* INSTALL:
	updated

	* acinclude.m4:
	evaluate $host instead of $build

	* build_mingw32:
	do not pass --build for allowing cross-compile without WINE being
	installed

2007-03-05	Andriano Rino <rino_andr/at/yahoo/dot/it>

	* ica/resources/it.ts:
	* ica/resources/it.qm:
	* ima/resources/it.ts:
	* ima/resources/it.qm:
	* setup/resources/it.ts:
	* setup/resources/it.qm:
	added Italian localization

2007-03-02	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/src/lock_widget.cpp:
	removed widget-flag Qt::X11BypassWindowManagerHint as it caused
	problems on some test systems

2007-03-01	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* configure.in:
	made RC4 release

	* configure.in:
	- added several stuff from x11vnc-0.8.4/configure.ac
	- print out error if XTEST-extension could not be found under Linux
	- removed "-ansi"-flag
	- added v4l-check again

	* ica/x11/README:
	* ica/win32/README:
	added README's with copyright-notices

	* ica/x11/x11vnc/*
	* ica/x11/x11vnc.c:
	integrated x11vnc 0.8.4

	* acinclude.m4:
	several fixes for less problems with cross-compiling iTALC (thanks to
	Timshell Knoll-Miller)

	* ima/Makefile.am:
	added italc.ico to EXTRA_DIST (thanks to Timshell Knoll-Miller)

	* ima/src/client.cpp:
	close connection to invisible clients (thanks to Timshell Knoll-Miller)

	* ima/src/client_manager.cpp:
	do not show all clients if no personal-config exists (thanks to Timshell
	Knoll-Miller)

	* setup/Makefile.am:
	added setup.ico to EXTRA_DIST (thanks to Timshell Knoll-Miller)

	* setup/src/dialogs.cpp:
	- include <QtXml/QtXml> instead of <Qt/QtXml> - fixes build-problem
	  reported by an user
	- correctly create installation-path in auto-setup-mode
	- export public key properly if it does not exist

	* ica/Makefile.am:
	- several small fixes in build-system
	- added missing entry for a header-file to sources-list