@@ -1,0 +1,7 @@
+?package(italc-master):\
+	needs="X11"\
+	section="Apps/Education"\
+	title="iTALC"\
+	command="/usr/bin/italc" \
+	icon32x32="/usr/share/pixmaps/italc.png"\
+	hints="KDE"
