@@ -1,0 +1,11 @@
+[Desktop Entry]
+Encoding=UTF-8
+Name=iTALC
+GenericName=View and remote-control clients
+GenericName[de]=Clients überwachen und fernsteuern
+Comment=Intelligent Teaching And Learning with Computers
+Icon=/usr/share/pixmaps/italc.png
+Exec=/usr/bin/italc
+Type=Application
+Terminal=false
+Categories=Qt;KDE;Education;X-KDE-Edu-Teaching;
